<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/fondo"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="267dp"
        android:gravity="center"
        android:text="@string/Bienvenido"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:text="@string/Usuario"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editusuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:text="@string/Contraseña"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editcontraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btniniciar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/iniciar" />

    <Button
        android:id="@+id/btncerrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Cancelar" />

</LinearLayout>